--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.matrix-picture-block img {
+.matrix-picture {
   width: 100%;
 }
 .matrix-picture-block .details {
@@ -34,11 +34,11 @@ body {
 .task-input-block {
   display: flex;
 }
-ul {
+.list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.list-item, .title {
   list-style:none;
 }
 input,button{
@@ -57,8 +57,8 @@ button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.title,
+.add-item-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +67,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,16 +79,16 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-item-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.new-task-input {
   width: 318px;
 }
 
@@ -106,7 +106,7 @@ li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.input-checkbox {
   margin: 0 10px;
 }
 li > label {
@@ -115,34 +115,34 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.input-task {
   width: 226px
 }
-button.delete img {
+.delete-image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-task-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.input-task {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .input-task {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.edit-mode-label {
     display:none;
 }
