refactor: format indents according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -16,10 +16,12 @@ body {
 .matrix-picture-block .details {
   font-family: fantasy, cursive;
 }
-
 @media (max-width:768px) {
-  .matrix-picture-block { text-align: center;
+
+  .matrix-picture-block {
+    text-align: center;
   }
+
 }
 .main-wrapper {
   display: block;
@@ -56,6 +58,7 @@ button {
 button:hover {
   color: #3a3A3a;
 }
+
 /* Heading */
 .title,
 .add-item-label {
@@ -97,7 +100,6 @@ li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
