refactor: format selectors and properties according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -40,10 +40,12 @@ body {
   margin: 0;
   padding: 0px;
 }
-.list-item, .title {
+.list-item,
+.title {
   list-style: none;
 }
-input,button {
+input,
+button {
   outline: none;
 }
 button {
